--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -234,3 +234,5 @@ jobs:
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
+    outputs:
+      slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
