chore: add validate api spec workflow

--- a/.github/workflows/validate_apispec_readme.yaml
+++ b/.github/workflows/validate_apispec_readme.yaml
@@ -1,4 +1,4 @@
-name: Publish Docs to Readme.com 📤
+name: Validate OpenAPI Specs 🧾
 
 on:
   workflow_call:
@@ -7,10 +7,6 @@ on:
         required: false
         type: string
         description: "Name of the gradle module generating the docs (e.g. partner-api)"
-      readme-api-spec-id:
-        required: false
-        type: string
-        description: "ID of the API spec to update (e.g. 6417257a88e60b00585e97f8); only relevant for pre-release specs or if your version never changes; can be omitted when creating a new version (e.g. production)"
       spec-prefix:
         required: true
         type: string
@@ -22,13 +18,10 @@ on:
       GHL_PASSWORD:
         required: true
         description: "Github Password (Gradle plugin)"
-      README_API_KEY:
-        required: true
-        description: "Readme.com API Key"
 
 jobs:
-  push-apidocs:
-    name: Push API docs to Readme.com
+  validate-api-specs:
+    name: Validate API specs
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -66,20 +59,7 @@ jobs:
             echo "API spec found at: $filepath"
           fi
         shell: bash
-      - name: Compile rdme command 🧮
-        id: compile_rdme_command
-        env:
-          README_SPEC_ID: ${{ inputs.readme-api-spec-id }}
-        run: |
-          if [ -z "README_SPEC_ID" ]
-          then
-            command="openapi ${{steps.find_api_spec.outputs.FILE_PATH}} --update --useSpecVersion --key=${{ secrets.README_API_KEY }}"
-          else
-            command="openapi ${{steps.find_api_spec.outputs.FILE_PATH}} --id=${{ inputs.readme-api-spec-id }} --key=${{ secrets.README_API_KEY }}"
-          fi
-          echo "COMMAND=$command" >> $GITHUB_OUTPUT
-        shell: bash
-      - name: Run `openapi` command 🚀
+      - name: Validate `openapi` spec 🙏
         uses: readmeio/rdme@v8
         with:
-          rdme: ${{steps.compile_rdme_command.outputs.COMMAND}}
+          rdme: openapi:validate ${{steps.find_api_spec.outputs.FILE_PATH}}
