--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -150,14 +150,18 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
       - name: Configure AWS credentials via assumed role
         uses: aws-actions/configure-aws-credentials@v1
-        if: ${{ secrets.AWS_ACCOUNT_ID }} != "" && ${{ secrets.AWS_ACCESS_KEY_ID }} == "" && ${{ secrets.AWS_SECRET_ACCESS_KEY }} == ""
+        if: ${{ env.AWS_ACCOUNT_ID }} != ""
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCESS_ID }}
         with:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ecr-put-image
           role-session-name: push-new-image-to-${{ inputs.service-identifier }}-${{ inputs.stage }}
           aws-region: ${{ inputs.region }}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
-        if: ${{ secrets.AWS_ACCOUNT_ID }} == "" && ${{ secrets.AWS_ACCESS_KEY_ID }} != "" && ${{ secrets.AWS_SECRET_ACCESS_KEY }} != ""
+        if: ${{ env.AWS_ACCOUNT_ID }} == ""
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCESS_ID }}
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
