--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,11 +39,14 @@ on:
       GHL_PASSWORD:
         required: true
         description: 'Github Password (Gradle plugin)'
+      AWS_ACCOUNT_ID:
+        required: false
+        description: 'AWS account id'
       AWS_ACCESS_KEY_ID:
-        required: true
+        required: false
         description: 'AWS access key id'
       AWS_SECRET_ACCESS_KEY:
-        required: true
+        required: false
         description: 'AWS secret access key'
       MANIFEST_REPO_PAT:
         required: true
@@ -51,6 +54,12 @@ on:
       SLACK_APP_TOKEN:
         required: true
         description: 'Slack app token'
+
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read
+  actions: read # This is required for 8398a7/action-slack
+
 jobs:
   test:
     name: Test
@@ -139,8 +148,25 @@ jobs:
           java-version: '17'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
+      - name: Check for secret.AWS_ACCOUNT_ID availability
+        id: secret-check
+        shell: bash
+        run: |
+          if [ "${{ secrets.AWS_ACCOUNT_ID }}" != '' ]; then
+            echo "available=true" >> $GITHUB_OUTPUT;
+          else
+            echo "available=false" >> $GITHUB_OUTPUT;
+          fi
+      - name: Configure AWS credentials via assumed role
+        uses: aws-actions/configure-aws-credentials@v1
+        if: steps.secret-check.outputs.available == 'true'
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ecr-put-image
+          role-session-name: push-new-image-to-${{ inputs.service-identifier }}-${{ inputs.stage }}
+          aws-region: ${{ inputs.region }}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
+        if: steps.secret-check.outputs.available == 'false'
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
