feature: added pr_title_checker to pull request workflow

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -17,7 +17,16 @@ on:
         required: false
         description: "Slack app token (Optional, won't publish to slack if not present)"
 jobs:
-  build:
+  pr_title_checker:
+    name: PR title checker
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: Slashgear/action-check-pr-title@v4.3.0
+        with:
+          regexp: '^(\[(development|staging)\]\s)?(build|chore|ci|docs|feat|feature|fix|perf|refactor|revert|style|test|release|ignore)(\([\w\- ]+\))?: (.+)'
+          helpMessage: "Example: 'feat(app-api): Add new vehicle integration (SERVER-123)'"
+  test:
     name: Test
     runs-on: ubuntu-latest
     timeout-minutes: 30
