--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -128,7 +128,7 @@ jobs:
   #     slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
   build:
     name: Build
-    needs: test
+    # needs: test
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
