--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -187,7 +187,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,darwin/arm64
+          platforms: linux/amd64,linux/arm64
           push: false
           file: ./${{ inputs.docker-file-name }}
           # tags:
