--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -131,6 +131,12 @@ jobs:
     # needs: test
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    strategy:
+      fail-fast: true
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
     steps:
       # - name: Publish progress message to slack
       #   uses: monta-app/slack-notifier-cli-action@main
@@ -146,6 +152,14 @@ jobs:
       #     slack-message-id: ${{ needs.test.outputs.slack-message-id }}
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            name/app
+          tags: |
+            type=sha,format=long
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
@@ -187,7 +201,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platform }}
           push: false
           file: ./${{ inputs.docker-file-name }}
           # tags:
@@ -196,6 +210,7 @@ jobs:
             JAVA_VERSION=${{ inputs.java-version }}
             GHL_USERNAME=${{ secrets.GHL_USERNAME }}
             GHL_PASSWORD=${{ secrets.GHL_PASSWORD }}
+          tags: ${{ steps.meta.outputs.tags }}
       # - name: Build docker container
       #   id: build-container
       #   env:
